# rs-vite-plugin-elm

./: .gitignore  AGENTS.md  AGENT_HARNESS.md  ANTIGRAVITY.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  ROADMAP.md  build.rs  package.json
.antigravity/hooks/: after-task.sh
.githooks/: post-commit
.github/workflows/: ci.yml
docs/adr/: 0001-performance-policy.md
npm/: index.d.ts  index.js
scripts/: after-task.sh  build.js  postinstall.js  profile-local.sh  security-post-action.sh  security-watchlist.md  semver-bump.js
src/: assets.rs  cli.rs  compile.rs  deps.rs  elm_make.rs  esm.rs  hmr.rs  import_id.rs  lib.rs  main.rs  options.rs  tests.rs
src/speed/: deps.rs  import_id.rs  mod.rs  multi_target.rs  paths.rs
test/: config-surface.test.js  example-output.snapshot.json  example-output.test.js  npm-wrapper.test.js
