[package]
name = "rs-vite-plugin-elm"
version = "0.2.5"
edition = "2021"
license = "MIT"
description = "Stdlib-only Rust core for vite-plugin-elm"
build = "build.rs"

[lib]
name = "rs_vite_plugin_elm"
path = "src/lib.rs"

[[bin]]
name = "rs-vite-plugin-elm"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
